--- a/legion/templates/frontend/index.html
+++ b/legion/templates/frontend/index.html
@@ -107,6 +107,6 @@ $(document).ready(function () {
 });
 </script>
 <script type="text/javascript">
-$(document).ready(function(){$("#home").addClass("active")});
+$(document).ready(function(){$("#home").addClass("active");$("#index").addClass("active")});
 </script>
 {% endblock script %}
