--- a/legion/templates/frontend/junta_fiscales.html
+++ b/legion/templates/frontend/junta_fiscales.html
@@ -1,12 +1,12 @@
 {% extends 'frontend/base.html' %}
 {% load staticfiles %}
 {% block script %}<script type="text/javascript">
-$(document).ready(function(){$("#responsabilidad_social").addClass("active")});
+$(document).ready(function(){$("#junta_fiscales").addClass("active");$("#quienesSomos").addClass("active")});
 </script>{% endblock script %}
 {% block contenido %}
 
   <div class="row">
-    <h1 class="text-primary text-center">RESPONSABILIDAD SOCIAL</h1>
+    <h1 class="text-primary text-center">junta_fiscales</h1>
   </div>
 <br/><br/><br/><br/>
 {% endblock contenido %}
