--- a/legion/templates/frontend/socios.html
+++ b/legion/templates/frontend/socios.html
@@ -1,7 +1,7 @@
 {% extends 'frontend/base.html' %}
 {% load staticfiles %}
 {% block script %}<script type="text/javascript">
-$(document).ready(function(){$("#informe").addClass("active")});
+$(document).ready(function(){$("#socios").addClass("active");$("#quienesSomos").addClass("active")});
 </script>{% endblock script %}
 {% block contenido %}
 
