--- a/legion/templates/login.html
+++ b/legion/templates/login.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Nefi">
+    <link rel="shortcut icon" href="{% static 'img/logo/icono.png' %}">
 
     <title>Sasar Avelinos | Login </title>
 
